--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -13,5 +13,9 @@
         <attr name="navigationIconTint" format="color"/>
         <attr name="bottomSheetColor" format="color"/>
         <attr name="bottomSheetTextColor" format="color"/>
+        <attr name="bannerBackgroundColor" format="color"/>
+        <attr name="similarBgColor" format="color"/>
+        <attr name="bottomSheetBgColor" format="color"/>
+        <attr name="lockIconTintColor" format="color"/>
     </declare-styleable>
 </resources>
